# trop-mam4-analytical

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  chemical_state.F90  environment.F90  photolysis_rate_constants.F90  shr_kind_mod.F90  trop_mam4_analytical.F90
doc/: Doxyfile
test/: CMakeLists.txt  camp.F90  camp_comparison_test.F90  camp_comparison_test.sh  config.json  plot.conf  reactions.json  species.json  tolerance.json
